--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
       </button>
     
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+        <ul class="navbar-nav m-auto">
+          <li class="px-3 nav-item active">
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
+          <li class="px-3 nav-item">
             <a class="nav-link" href="#">Aboute Us</a>
           </li>
-          <li class="nav-item dropdown">
+          <li class="px-3 nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Services
             </a>
@@ -40,10 +40,10 @@
               <a class="dropdown-item" href="#">Health tracker Apps</a>
             </div>
           </li>
-          <li class="nav-item">
+          <li class="px-3 nav-item">
             <a class="nav-link" href="#">Product</a>
           </li>
-          <li class="nav-item">
+          <li class="px-3 nav-item">
             <a class="nav-link" href="#">Contect</a>
           </li>
         </ul>
